<resources>
    <string name="app_name">Spacey Sounds</string>
    <string name="content_description">Logo of the Space Apps Challenge</string>
    <string name="cassini_saturn1">Cassini Saturn Radio Emissions 1</string>
    <string name="cassini_saturn2">Cassini Saturn Radio Emissions 2</string>
    <string name="spaceysounds_play">Play</string>
    <string name="spaceysounds_pause">Pause</string>
    <string name="spaceysounds_stop">Stop</string>
    <string name="spaceysounds_resume">Resume</string>
    <string name="cassini_enceladus">Cassini Enceladus Soudn</string>
    <string name="voyager_interstellar_plasma">Voyager Interstellar Plasma Sounds</string>
    <string name="voyager_lightning">Voyager Lightning on Jupiter</string>
    <string name="kepler_star_kic12268220c">Kepler light waves as sound (Star KIC12268220C)</string>
    <string name="kepler_star_kic7671081b">Kepler light waves as sound (Star KIC7671081B)</string>
    <string name="apollo_merry_chrismas">Apollo 8 Greeting</string>
    <string name="apollo11_we_have_lift_off">Apollo 11: We have liftoff</string>
    <string name="apollo11_eagle_has_landed">Apollo 11: Eagle has landed</string>
    <string name="apollo11_one_small_step">Apollo 11: One Small Step</string>
    <string name="apollo13_houston">Apollo 13: Houston, we have a problem</string>
    <string name="discovery_throttle_up">Discovery - Go at throttle up</string>
    <string name="discovery_go_for_deploy">Discovery - go for deploy</string>
    <string name="discovery_good_picture">Discovery - Good picture of Steve</string>
    <string name="discovery_houston">Discovery - Houston Discovery</string>
    <string name="discovery_how_do_you_read">Discovery - How do you read?</string>
    <string name="discovery_lookin_at_it">Discovery - Lookin\' at it</string>
    <string name="discovery_meco">Discovery - MECO</string>
    <string name="discovery_nice_to_be_in_orbit">Discovery - Nice to be in orbit</string>
    <string name="discovery_on_its_way_to_orbit">Discovery - On its way to orbit</string>
    <string name="discovery_roger_roll">Discovery - Roger Roll</string>
    <string name="discovery_sts26_liftoff">Discovery - STS-26 Liftoff</string>
    <string name="cassini_sounds">Cassini Sounds</string>
    <string name="saturn_radio_1">Saturn Radio 1</string>
    <string name="saturn_radio_2">Saturn Radio 2</string>
    <string name="enceladus_sound">Enceladus Sound</string>
    <string name="voyager_sounds">Voyager Sounds</string>
    <string name="interstellar_plasma">Interstellar Plasma</string>
    <string name="jupiter_lightning">Jupiter Lightning</string>
    <string name="kepler_light_waves_as_sound">Kepler Light Waves as Sound</string>
    <string name="star_1">Star KIC12268220C</string>
    <string name="star_2">Star KIC7671081B</string>
    <string name="apollo_missions">Apollo Missions</string>
    <string name="apollo_8_merry_christmas">Apollo 8 Merry Christmas</string>
    <string name="apollo_11_we_have_lift_off">Apollo 11 We Have Lift-Off</string>
    <string name="apollo_11_eagle_has_landed">Apollo 11 Eagle has landed</string>
    <string name="apollo_11_one_small_step">Apollo 11 One Small Step</string>
    <string name="apollo_13_houston_we_have_a_problem">Apollo 13 Houston, We have a problem</string>
    <string name="discovery">Discovery</string>
    <string name="go_at_throttle_up">Go at throttle Up</string>
    <string name="go_for_deploy">Go for deploy</string>
    <string name="good_picture_of_steve">Good picture of Steve</string>
    <string name="houston_discovery">Houston Discovery</string>
    <string name="how_do_you_read">How do you read</string>
    <string name="lookin_at_it">Lookin\' at it</string>
    <string name="meco">MECO</string>
    <string name="nice_to_be_in_orbit">Nice to be in Orbit</string>
    <string name="on_its_way_to_orbit">On its way to Orbit</string>
    <string name="roger_roll">Roger roll</string>
    <string name="sts_26_liftoff">STS-26 Liftoff</string>
    <string name="courtesy">All media courtesy of Nasa</string>
    <string name="nasa_link">http://www.nasa.gov/connect/sounds</string>
</resources>
